--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">PopCornFactory</string>
     <string name="descripcion_menuPrincipal">Welcome to Popcorn Factoty, home of the best series and movies. Just lay down, make some popcorn and enjoy!</string>
     <string name="boton_Entrar">Get me in!</string>
+    <string name="peliculas">Peliculas</string>
+
+    <string-array name="lenguajes">
+        <item>Metodo de pago</item>
+        <item>Efectivo</item>
+        <item>Con tarjeta</item>
+    </string-array>
 </resources>
